--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "styled-components": "^5.1.1",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
     "@types/react": "^16.9.17",
+    "@types/styled-components": "^5.1.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
